[gd_scene load_steps=4 format=3 uid="uid://bloj5uft13qv2"]

[ext_resource type="Texture2D" uid="uid://p16h5um7ovo2" path="res://resources/items/_assets/items_scaled.png" id="1_3h47r"]
[ext_resource type="Script" path="res://ui/crafting_entry/crafting_entry.gd" id="1_xhmuc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4o3be"]
atlas = ExtResource("1_3h47r")
region = Rect2(6, 6, 96, 96)

[node name="MarginContainer" type="MarginContainer"]
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_xhmuc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = SubResource("AtlasTexture_4o3be")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]Wooden Pickaxe"
fit_content = true

[node name="CraftButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer" groups=["tooltip_trigger"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Craft"

[connection signal="focus_entered" from="PanelContainer/MarginContainer/HBoxContainer/CraftButton" to="." method="_on_craft_button_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/CraftButton" to="." method="_on_craft_button_pressed"]
